--- a/exam-project/src/app/shared/welcome/welcome.component.html
+++ b/exam-project/src/app/shared/welcome/welcome.component.html
@@ -2,7 +2,7 @@
     <h3>Welcome!</h3>
     <p>IN PROGRESS!!!</p>
         <img src="https://kinkypotionportiondotcom.files.wordpress.com/2019/08/bass-sea-festival-2019-lemouserat-photography.jpg" alt="">
-    <div class="logged" >
+    <!-- <div class="logged" >
         <ul>
             <li>
                 <a href="#">
@@ -17,5 +17,5 @@
                 </a>
             </li>
         </ul>
-    </div>
+    </div> -->
 </div>   
