--- a/exam-project/src/app/core/footer/footer.component.html
+++ b/exam-project/src/app/core/footer/footer.component.html
@@ -1,9 +1,8 @@
 <footer>
   <div class="mini-navbar-wrap">
   <ul>
-      <li>Lemouserat photo community </li>
-      <li>   Created by Anastas Chobanov - lemouserat                           </li>
-      <li> SoftUni - Angular march 2022</li>
+      <li>Petya Nacheva</li>
+      <li> SoftUni - Angular December 2022</li>
   </ul>
 </div>
 </footer>
