--- a/exam-project/src/app/core/header/header.component.html
+++ b/exam-project/src/app/core/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="mini-navbar-wrap">
     <div class="logo-wrap">
-      <p class="logo"><span class="logo">Lemouserat photo community</span></p>
+      <p class="logo"><span class="logo">The Movie Universe</span></p>
     </div>
     <div class="mini-navbar" *ngIf="!(isLoggedIn$ | async)" >
       <ul>
