--- a/exam-project/src/app/shared/welcome/welcome.component.css
+++ b/exam-project/src/app/shared/welcome/welcome.component.css
@@ -10,7 +10,7 @@
 }
 
 .welcome h3 {
-    background-color: rgb(13, 109, 104);
+    background: rgb(22, 43, 42); 
     border-radius: 0.3em;
     width: 98%;
     padding: 0.3em 1em;
