error page and about page

--- a/exam-project/src/app/auth/register/register.component.html
+++ b/exam-project/src/app/auth/register/register.component.html
@@ -5,7 +5,7 @@
 
         <!-- username -->
         <p class="field field-icon">
-            <label for="username"><span><i class="fas fa-user"></i></span></label>
+            <!-- <label for="username"><span><i class="fas fa-user"></i></span></label> -->
             <input formControlName="username"
                 [class.input-error]="registerFormGroup.controls['username'].touched && registerFormGroup.controls['username'].invalid"
                 type="text" name="username" id="username" placeholder="Johny">
@@ -28,7 +28,7 @@
 
         <!-- email -->
         <p class="field field-icon">
-            <label for="email"><span><i class="fas fa-envelope"></i></span></label>
+            <!-- <label for="email"><span><i class="fas fa-envelope"></i></span></label> -->
             <input formControlName="email" type="email" name="email" id="email" placeholder="john.doe@gmail.com"
                 [class.input-error]="shouldShowErrorForControl('email')">
         </p>
@@ -47,7 +47,7 @@
 
         <div formGroupName="passwords">
             <p class="field field-icon">
-                <label for="password"><span><i class="fas fa-lock"></i></span></label>
+                <!-- <label for="password"><span><i class="fas fa-lock"></i></span></label> -->
                 <input [class.input-error]="shouldShowErrorForControl('password', passwordsGroup)" formControlName="password" type="password" name="password" id="password" placeholder="******">
             </p>
             
@@ -63,7 +63,7 @@
 
             <!-- rePassword -->
             <p class="field field-icon">
-                <label for="rePassword"><span><i class="fas fa-lock"></i></span></label>
+                <!-- <label for="rePassword"><span><i class="fas fa-lock"></i></span></label> -->
                 <input formControlName="rePassword" type="password" name="rePassword" id="rePassword"
                     placeholder="******">
             </p>
@@ -77,7 +77,7 @@
 
         <p class="text-center">
             Have an account?
-            <a href="#">Log In</a>
+            <a href="/login">Log In</a>
         </p>
 
     </fieldset>
