--- a/exam-project/src/app/auth/login/login.component.css
+++ b/exam-project/src/app/auth/login/login.component.css
@@ -1,41 +1,45 @@
 /*login register forms  */
 
-form.login, form.register {
-    width: 40%;
-    margin: auto;
+form.login{
+
+    display:block;
+    margin: 60px auto;
     text-align: center;
+    width: 500px;
+    height: 52vh;
 }
 
-.login fieldset, .register fieldset {
-    border-radius: 0.3em;
-    padding: 0.8em;
+.login fieldset {
+    border-radius: 8px;
+    padding: 10px;
     background-color: #ffffff;
 }
 
-.login h2, .register h2 {
+.login h2{
     padding-top: 0;
     border-bottom: none;
 }
 
-.login p, .register p {
+.login p{
     padding-bottom: 0;
-    padding-top: 1.5rem;
+    padding-top: 10px;
+    margin: 20px;
 }
 
-.login input, .register input {
+.login input{
     flex: 0 1 100%;
     border: 1px solid;
-    padding: 0.3em;
-    border-left: 0.3em solid green;
-    border-top-right-radius: 0.3em;
-    border-bottom-right-radius: 0.3em;
+    padding: 10px;
+    border-left: 4px solid green;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
-.login select, .register select {
+.login select {
     border-color: black;
 }
 
-.login button, .register button {
+.login button{
     color: white;
     border: none;
     border-radius: 0.3em;
@@ -45,7 +49,7 @@ form.login, form.register {
     outline: none;
 }
 
-.login i, .register i {
+.login i {
     border: 1px solid;
     border-right: none;
     padding: 0.55em;
@@ -54,19 +58,16 @@ form.login, form.register {
     background-color: #e9ecef;
 }
 
-.login a, .register a {
+.login a {
     color: #007bff;
 }
 
-.login a:hover, .register a:hover {
+.login a:hover{
     cursor: pointer;
 }
 
-.register .tel {
-    padding-right: 0.8em;
-}
 
-.login .field, .register .field {
+.login .field {
     display: flex;
     padding-bottom: 0;
 }
