--- a/exam-project/src/app/auth/login/login.component.html
+++ b/exam-project/src/app/auth/login/login.component.html
@@ -5,7 +5,7 @@
         <p *ngIf="errorMessage" class="error">{{errorMessage}}</p>
 
         <p class="field field-icon">
-            <label for="email"><span><i class="fas fa-envelope"></i></span></label>
+            <!-- <label for="email"><span><i class="fas fa-envelope"></i></span></label> -->
             <input formControlName="email" type="email" name="email" id="email" placeholder="john.doe@gmail.com">
         </p>
         <ng-container *ngIf="loginFormGroup.controls['email'].touched && loginFormGroup.controls['email'].invalid">
@@ -19,7 +19,7 @@
         </ng-container>
 
         <p class="field field-icon">
-            <label for="password"><span><i class="fas fa-lock"></i></span></label>
+            <!-- <label for="password"><span><i class="fas fa-lock"></i></span></label> -->
             <input formControlName="password" type="password" name="password" id="password" placeholder="******">
         </p>
 
@@ -37,7 +37,7 @@
 
         <p class="text-center">
             Have an account?
-            <a href="#">Register</a>
+            <a href="/register">Register</a>
         </p>
 
     </fieldset>
