--- a/exam-project/src/app/auth/profile/profile.component.css
+++ b/exam-project/src/app/auth/profile/profile.component.css
@@ -1,14 +1,15 @@
 :host {
      width: 100%; 
+     height: 67vh;
 }
 
 .profile {
     width: 100%;
     max-width: 500px;
-    margin: 2em auto 1rem;
-    padding: .5em;
-    border: .3em solid rgb(10, 80, 70);
-    border-radius: .5rem;
+    margin: 70px auto;
+    padding: 10px;
+    border: 4px solid rgb(22, 43, 42);  
+    border-radius: 8px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: rgb(68, 68, 68);
     background-color: hsla(0, 0%, 94.1%, .8);
@@ -18,7 +19,7 @@
 
 .profile h3 {
     text-decoration: underline;
-    color: rgb(10, 80, 70);
+    color: rgb(22, 43, 42);  
 }
 
 .profile img {
