--- a/exam-project/src/app/auth/register/register.component.css
+++ b/exam-project/src/app/auth/register/register.component.css
@@ -1,41 +1,42 @@
 /*login register forms  */
 
 form {
-    width: 60%;
-    margin: 2em auto 0;
+    width: 500px;
+    margin: 50px auto;
     text-align: center;
+    height: 60vh;
 }
 
-.login fieldset, .register fieldset {
-    border-radius: 0.3em;
-    padding: 0.8em;
+ .register fieldset {
+    border-radius: 8px;
+    padding: 10px;
     background-color: #ffffff;
 }
 
-.login h2, .register h2 {
+ .register h2 {
     padding-top: 0;
     border-bottom: none;
 }
-
-.login p, .register p {
+ .register p {
     padding-bottom: 0;
-    padding-top: 1.5rem;
+    padding-top: 10px;
+    margin: 20px;
 }
 
-.login input, .register input {
+ .register input {
     flex: 0 1 100%;
     border: 1px solid;
-    padding: 0.3em;
-    border-left: 0.3em solid green;
-    border-top-right-radius: 0.3em;
-    border-bottom-right-radius: 0.3em;
+    padding: 10px;
+    border-left: 4px solid green;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
-.login select, .register select {
+ .register select {
     border-color: black;
 }
 
-.login button, .register button {
+ .register button {
     color: white;
     border: none;
     border-radius: 0.3em;
@@ -45,7 +46,7 @@ form {
     outline: none;
 }
 
-.login i, .register i {
+ .register i {
     border: 1px solid;
     border-right: none;
     padding: 0.55em;
@@ -54,19 +55,17 @@ form {
     background-color: #e9ecef;
 }
 
-.login a, .register a {
+ .register a {
     color: #007bff;
 }
 
-.login a:hover, .register a:hover {
+ .register a:hover {
     cursor: pointer;
 }
 
-.register .tel {
-    padding-right: 0.8em;
-}
 
-.login .field, .register .field {
+
+.register .field {
     display: flex;
     padding-bottom: 0;
 }
