--- a/exam-project/src/app/feature/pages/page-not-found-page/page-not-found-page.component.html
+++ b/exam-project/src/app/feature/pages/page-not-found-page/page-not-found-page.component.html
@@ -1,5 +1,5 @@
 <div class="mainbox">
-    <div class="err">404</div>
-    <div class="msg">Ooops! Page Not Found<p>Let's go <a routerLink="/home">home</a> and try from there.</p>
-    </div>
+    <img src="../../../../assets/404.png" alt="">
+  <p>Let's go <a routerLink="/home">home</a> and try from there.</p>
+
 </div>
