--- a/exam-project/src/app/feature/pages/home-page/home-page.component.html
+++ b/exam-project/src/app/feature/pages/home-page/home-page.component.html
@@ -1,1 +1,41 @@
-<app-welcome></app-welcome>
+<div class="welcome">
+    <app-welcome></app-welcome>
+</div>
+
+<h3>Most Liked Recipe:</h3>
+
+<div class="card-container" *ngIf="movieMostLiked">
+    <div class="card u-clearfix">
+        <div class="card-body">
+            <span class="card-number subtle"><i class="fas fa-trophy fa-lg winner"></i></span>
+            <h2 class="card-title">{{movieMostLiked.title}}</h2>
+            <div class="iconsgrid">
+                <p class="card-description subtle"><i class="far fa-user icons"></i> Author:
+                    {{movieMostLiked.userId.username}}</p>
+                <p class="card-description subtle"><i class="fa fa-thumbs-up icons"></i> Likes:
+                    {{movieMostLiked.likes.length}}</p>
+            </div>
+            <div class="card-read" [routerLink]="['/recipes', movieMostLiked._id]">Details</div>
+        </div>
+        <img src="{{movieMostLiked.poster}}" alt="image" class="card-media" />
+    </div>
+</div>
+
+<h3>Most Commented Recipe:</h3>
+
+<div class="card-container" *ngIf="movieMostCommented">
+    <div class="card u-clearfix">
+        <div class="card-body">
+            <span class="card-number subtle"><i class="fas fa-trophy fa-lg winner"></i></span>
+            <h2 class="card-title">{{movieMostCommented.title}}</h2>
+            <div class="iconsgrid">
+                <p class="card-description subtle"><i class="far fa-user icons"></i> Author:
+                    {{movieMostCommented.userId.username}}</p>
+                <p class="card-description subtle"><i class="fa fa-thumbs-up icons"></i> Comments:
+                    {{movieMostCommented.comments.length}}</p>
+            </div>
+            <div class="card-read" [routerLink]="['/recipes', movieMostCommented._id]">Details</div>
+        </div>
+        <img src="{{movieMostCommented.poster}}" alt="image" class="card-media" />
+    </div>
+</div>
