--- a/exam-project/src/app/feature/movies/movies-detail-page/movies-detail-page.component.html
+++ b/exam-project/src/app/feature/movies/movies-detail-page/movies-detail-page.component.html
@@ -19,11 +19,11 @@
 
             <h2 class="subtitle">
                 <i class="fa fa-solid fa-list fa-sm icons"></i>
-                Ingredients:
+                Actors:
             </h2>
-            <!-- <ul class="checkmark pad-left" *ngFor="let ingr of movie.ingredients">
-                <li>{{ingr}}</li>
-            </ul> -->
+            <ul class="checkmark pad-left" *ngFor="let actor of movie.actors">
+                <li>{{actor}}</li>
+            </ul>
 
             <div class="buttons">
                 <div class="btnlike">
