--- a/exam-project/src/app/auth/profile/profile.component.html
+++ b/exam-project/src/app/auth/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="profile"><img [src]="(currentUser$ | async).profilePicture || '/assets/profile.png'" alt="default user">
+<div class="profile"><img [src]=" '/assets/profile.png'" alt="default user">
     <h3>User Info:</h3>
 
     <ng-container *ngIf="(currentUser$ | async) as currentUser">
