--- a/exam-project/src/app/feature/movies/movies-list/movies-list.component.html
+++ b/exam-project/src/app/feature/movies/movies-list/movies-list.component.html
@@ -2,7 +2,7 @@
     <div class="parent">
 
         <mat-form-field appearance="outline">
-            <mat-label>Search by recipe name</mat-label>
+            <mat-label>Search by movie name</mat-label>
             <input [formControl]="searchControl" type="text" matInput name="recipeName" id="recipeName"
                 placeholder="long island">
         </mat-form-field>
@@ -11,14 +11,14 @@
 </form>
 
 <div *ngIf="movieList && movieList.length !== 0" id="portfolio-content" class="center-text">
-    <h3>Latest Recipes:</h3>
+    <h3>Latest Movies:</h3>
     <div class="portfolio-page" id="page-1">
         <app-recipes-list-item *ngFor="let recipe of movieList" [recipe]="recipe"></app-recipes-list-item>
     </div>
 </div>
 
 <div *ngIf="movieList && movieList.length === 0" id="portfolio-content" class="center-text">
-    <h3 class="portfolio-page" id="page-1">No Recipes Found!</h3>
+    <h3 class="portfolio-page" id="page-1">No Movies Found!</h3>
 </div>
 
 <div *ngIf="!movieList">
