most liked and most commented bug fixed

--- a/exam-project/src/app/feature/pages/home-page/home-page.component.html
+++ b/exam-project/src/app/feature/pages/home-page/home-page.component.html
@@ -33,7 +33,7 @@
             <div class="iconsgrid">
                 <p class="card-description subtle"><i class="far fa-user icons"></i> Author:
                     {{movieMostCommented.userId.username}}</p>
-                <p class="card-description subtle"><i class="fa fa-thumbs-up icons"></i> Comments:
+                <p class="card-description subtle"><i class="far fa-comment icons"></i> Comments:
                     {{movieMostCommented.comments.length}}</p>
                     <img src="{{movieMostCommented.poster}}" alt="" class="card-media" />
             </div>
