--- a/exam-project/src/app/feature/pages/home-page/home-page.component.css
+++ b/exam-project/src/app/feature/pages/home-page/home-page.component.css
@@ -1,8 +1,9 @@
+@import url('https://use.fontawesome.com/releases/v6.0.0/css/all.css');
 .card-container{
 width: 400px;
 border: 3px solid cadetblue;
 border-radius: 5px;
-margin-left: 30px;
+/* margin-left: 30px; */
 margin-top: 30px;
 padding: 20px;
 text-align: center;
@@ -27,8 +28,9 @@ background-color: #ebf5fe;
 .container{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    margin: auto;
+    justify-content: space-around;
+    column-gap: 50px;
+    /* margin: auto; */
 }
 .btn{
     border: none;
