--- a/exam-project/src/app/auth/profile/profile.component.html
+++ b/exam-project/src/app/auth/profile/profile.component.html
@@ -11,25 +11,26 @@
                 <p>Email: </p>
                 <p>{{currentUser.email}}</p>
             </div>
-            <div class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats">
+       
+            <div class="info-movies">
                 <div class="numbers"> <span class="articles">Movies: </span> <span
                         class="number1">{{currentUser.movies.length}}</span> </div>
                 <div class="numbers"> <span class="followers">Comments: </span> <span
                         class="number2">{{currentUser.comments.length}}</span> </div>
             </div>
-            
+           
             <button (click)="enterEditMode(currentUser)" class="edit-button">Edit</button>
             <button *ngIf="!isShowMovies" (click)="showUserMovies(currentUser, 'show')"
-                                class="btn btn-sm btn-primary w-100 ml-2">
+                                >
                                 My movies</button>
                             <button *ngIf="isShowMovies" (click)="showUserMovies(currentUser, 'hide')"
-                                class="btn btn-sm btn-primary w-100 ml-2">
+                                >
                                 Hide movies</button>
                                 <button *ngIf="!isLikedShow" (click)="showLikedByUserMovies(currentUser, 'show')"
-                                class="btn btn-sm btn-primary w-100 ml-2">
+                               >
                                 Liked movies</button>
                             <button *ngIf="isLikedShow" (click)="showLikedByUserMovies(currentUser, 'hide')"
-                                class="btn btn-sm btn-primary w-100 ml-2">
+                                >
                                 Hide movies</button>
 
         </ng-container>
@@ -44,17 +45,13 @@
                     <p>Email: </p>
                     <input #email="ngModel" [class.input-error]="email.touched && email.invalid" type="email" name="email" id="email" ngModel required emailValidator value="john.doe@gmail.com">
                 </div>
-                
-                <!-- <div class="flex">
-                    <p>Profile picture: </p>
-                    <input type="file" accept="image/png" id="profile-picture" (change)="handleProfilePictureChange($event)">
-                </div> -->
-                <div class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats">
+                <div class="info-movies">
                     <div class="numbers"> <span class="articles">Movies: </span> <span
                             class="number1">{{currentUser.movies.length}}</span> </div>
                     <div class="numbers"> <span class="followers">Comments: </span> <span
                             class="number2">{{currentUser.comments.length}}</span> </div>
                 </div>
+                
                 <button type="button" (click)="exitEditMode()"  class="red-button">Cancel</button>
                 <button   [disabled]="editProfileForm.invalid" class="green-button">Save</button>
             </form>
@@ -68,36 +65,44 @@
             </div>
     
             <div [@.disabled]="isDisabled">
-                <div class="pb-5" [@itemAnimation]="userMovies.length">
+                <div *ngIf="userMovies.length>0">
+                <div  [@itemAnimation]="userMovies.length">
                     <div *ngFor="let movie of userMovies">
-                        <div class="container mt-2">
-                            <div class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats">
-                                <div class="d-flex flex-column"> <span class="articles">Movie:</span> <span
+                        <div class="container-movie">
+                            <div class="  stats">
+                                <div > <span class="articles">Movie: </span> <span
                                         class="number1">{{movie.title}}</span> </div>
-                                <div class="d-flex flex-column mt-1"> <button class="btn btn-sm btn-outline-primary"
+                                <div > <button 
                                         [routerLink]="['/movies', movie._id]">Details</button> </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            </div>
         </ng-container>
 
+       
         <ng-container *ngIf="isLikedShow">
             <h4>Liked Movies:</h4>
+            <div *ngIf="likedMovies.length === 0">
+                <p class="emptyarray"><strong> You don't have any liked movies </strong></p>
+            </div>
+            <div *ngIf="likedMovies.length > 0">
             <div [@.disabled]="isDisabled">
-                <div class="pb-5" [@itemAnimation]="userMovies.length">
+                <div  [@itemAnimation]="likedMovies.length">
                     <div *ngFor="let movie of likedMovies">
-                        <div class="container mt-2">
-                            <div class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats">
-                                <div class="d-flex flex-column"> <span class="articles">Movie:</span> <span
+                        <div class="container-movie">
+                            <div>
+                                <div> <span class="articles">Movie:</span> <span
                                         class="number1">{{movie.title}}</span> </div>
-                                <div class="d-flex flex-column mt-1"> <button class="btn btn-sm btn-outline-primary"
+                                <div> <button
                                         [routerLink]="['/movies', movie._id]">Details</button> </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
         </ng-container>
     </ng-container>
