--- a/exam-project/src/app/auth/register/register.component.css
+++ b/exam-project/src/app/auth/register/register.component.css
@@ -1,10 +1,9 @@
-/*login register forms  */
 
 form {
     width: 500px;
     margin: 50px auto;
     text-align: center;
-    height: 60vh;
+    height: 65vh;
 }
 
  .register fieldset {
@@ -20,7 +19,7 @@ form {
  .register p {
     padding-bottom: 0;
     padding-top: 10px;
-    margin: 20px;
+    margin:10px 20px;
 }
 
  .register input {
@@ -77,6 +76,8 @@ p.error {
     border-radius: 0.3em;
     color: red;
     padding-top: 0;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .register .input-error {
